--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ name = "pypi"
 pandas = "*"
 prefect = "*"
 sqlalchemy = "*"
-psycopg2 = "*"
 pyarrow = "*"
 google-cloud-storage = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
