--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-prefect = "*"
+prefect = {extras = ["google"], version = "*"}
 sqlalchemy = "*"
 pyarrow = "*"
 google-cloud-storage = "*"
